# cmake_test

./: cmakelists.txt  main.c
First Test/: cmakelists.txt  zgt.c  zgt.h
First Test/module/: dsp.h
Second Test/: CMakeLists.txt  gd32f4xx_flash.ld
Second Test/GD32/GD32F4xx_Firmware_Library/CMSIS/GD/GD32F4xx/Source/: system_gd32f4xx.c
Second Test/GD32/GD32F4xx_Firmware_Library/CMSIS/GD/GD32F4xx/Source/ARM/: CMakeLists.txt
Second Test/GD32/GD32F4xx_Firmware_Library/GD32F4xx_standard_peripheral/Include/: gd32f4xx_dma.h
Second Test/GD32/Project/: gd32f4xx_it.c  gd32f4xx_it.h  main.c  nocmakelists.txt  readme.txt  systick.c  systick.h
Second Test/GD32/Project/MDK-ARM/: Project.uvgui.hl0379  Project.uvopt  Project.uvproj
Second Test/GD32/Project/MDK-ARM/list/: Project.map  startup_gd32f450_470.lst
Second Test/GD32/Project/MDK-ARM/output/: Project.axf  Project.build_log.htm  Project.hex  Project.htm  Project.lnp  Project_GD32450V_START.dep  gd32f450v_start.crf  gd32f450v_start.d  gd32f4xx_adc.crf  gd32f4xx_adc.d  gd32f4xx_can.crf  gd32f4xx_can.d  gd32f4xx_crc.crf  gd32f4xx_crc.d  gd32f4xx_ctc.crf  gd32f4xx_ctc.d  gd32f4xx_dac.crf  gd32f4xx_dac.d  gd32f4xx_dbg.crf  gd32f4xx_dbg.d  gd32f4xx_dci.crf  gd32f4xx_dci.d  gd32f4xx_dma.crf  gd32f4xx_dma.d  gd32f4xx_enet.crf  gd32f4xx_enet.d  gd32f4xx_exmc.crf  gd32f4xx_exmc.d  gd32f4xx_exti.crf  gd32f4xx_exti.d  gd32f4xx_fmc.crf  gd32f4xx_fmc.d  gd32f4xx_fwdgt.crf  gd32f4xx_fwdgt.d  gd32f4xx_gpio.crf  gd32f4xx_gpio.d  gd32f4xx_i2c.crf  gd32f4xx_i2c.d  gd32f4xx_ipa.crf  gd32f4xx_ipa.d  (+35 more)
Second Test/GD32/Utilities/: gd32f450v_start.c  gd32f450v_start.h
Third Test  Library/: cmakelists.txt  main.c
Third Test  Library/src/: cmakelists.txt  s1.c  s1.h
module/: dsp.c
